# fuckddl

./: .gitignore  DESIGN_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  git_sync.rs  mod.rs  reminder.rs  schedule.rs  stt.rs  todo.rs
src-tauri/src/git/: sync.rs
src-tauri/src/store/: json_store.rs  schema.rs
src-tauri/src/stt/: mod.rs
src/agent/: graph.ts  llm.ts  state.ts  tools.ts
src/components/: AgentDialog.tsx  CalendarView.tsx  ConfirmSheet.tsx  RecentActivityList.tsx  ScheduleCard.tsx  ScheduleList.tsx  SettingsView.tsx  SyncIndicator.tsx  TodoCard.tsx  TodoConfirmCard.tsx  TodoList.tsx  VoiceOrb.tsx  VoiceWaveform.tsx
src/hooks/: useAgent.ts  useConfig.ts  useSchedule.ts  useSync.ts  useTodos.ts  useVoiceInput.ts
src/lib/: stt.ts
src/types/: index.ts
